--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,23 +6,23 @@ phases:
   pre_build:
     commands:
       # Install Snyk
-      - echo Install Snyk
-      - curl -Lo ./snyk "https://github.com/snyk/snyk/releases/download/v1.210.0/snyk-linux"
-      - chmod -R +x ./snyk
+      # - echo Install Snyk
+      # - curl -Lo ./snyk "https://github.com/snyk/snyk/releases/download/v1.210.0/snyk-linux"
+      # - chmod -R +x ./snyk
       # Snyk auth
       # - ./snyk config set api="$SNYK_AUTH_TOKEN"
       # Build Docker image for testing
-      - echo Build client and backend docker images for testing...
-      - docker build -t lukondefmwila/react-test -f ./client/Dockerfile.dev ./client
-      - docker build -t lukondefmwila/nodejs-test -f ./backend/Dockerfile.dev ./backend
+      # - echo Build client and backend docker images for testing...
+      # - docker build -t lukondefmwila/react-test -f ./client/Dockerfile.dev ./client
+      # - docker build -t lukondefmwila/nodejs-test -f ./backend/Dockerfile.dev ./backend
   build:
     commands:
       - echo Build started on `date`
       # Run tests with built Docker images
-      - echo Run react tests...
-      - docker run -e CI=true lukondefmwila/react-test
-      - echo Run nodejs tests...
-      - docker run -e CI=true lukondefmwila/nodejs-test
+      # - echo Run react tests...
+      # - docker run -e CI=true lukondefmwila/react-test
+      # - echo Run nodejs tests...
+      # - docker run -e CI=true lukondefmwila/nodejs-test
       # Scan Docker image with Snyk
       ## Client
       ## Run test for security vulernabilities
@@ -36,15 +36,15 @@ phases:
       # - ./snyk monitor --docker lukondefmwila/nodejs-test:latest --file=./backend/Dockerfile.dev
       # Build the Docker images
       - echo Building the production Docker image...
-      - docker build -t lukondefmwila/dkr-multicontainer-app-client ./client
-      - docker build -t lukondefmwila/dkr-multicontainer-app-backend ./backend
-      - docker build -t lukondefmwila/dkr-multicontainer-app-nginx ./nginx
+      - docker build -t luciancalian/dkr-multicontainer-app-client ./client
+      - docker build -t luciancalian/dkr-multicontainer-app-backend ./backend
+      - docker build -t luciancalian/dkr-multicontainer-app-nginx ./nginx
       # Log in to the Docker CLI
-      - echo "$DOCKER_PW" | docker login -u "$DOCKER_ID" --password-stdin
+      - docker login -u luciancalian -p garant1e
   post_build:
     commands:
       # Take these images and push them to Docker hub
       - echo Pushing the Docker images...
-      - docker push lukondefmwila/dkr-multicontainer-app-client
-      - docker push lukondefmwila/dkr-multicontainer-app-backend
-      - docker push lukondefmwila/dkr-multicontainer-app-nginx
+      - docker push luciancalian/dkr-multicontainer-app-client
+      - docker push luciancalian/dkr-multicontainer-app-backend
+      - docker push luciancalian/dkr-multicontainer-app-nginx
